web-infras/parser/tests/fixtures/esprima/ES6/object-initialiser/invalid-proto-literals/output.txt
[SyntaxError]: property name __proto__ appears more than once in object literal (1,23)
1|({ "__proto__": null, '__proto__': null })
 |                     ^
